add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           ...
       </div>
          <h2>Meiani</h2>
-         <P>npttc Student</P>
+         <P>Nptcc Student</P>
     <div> 
         <nav> {
           background: rgb(239, 80, 41);
@@ -95,15 +95,16 @@
         <main>
   <!-- Sidebar section -->
   <div> 
-    <img src="https://static01.nyt.com/images/2021/08/16/world/16afghan-america/16afghan-america-mobileMasterAt3x.jpg" >  
+    <img class " sidebar-img "src="https://static01.nyt.com/images/2021/08/16/world/16afghan-america/16afghan-america-mobileMasterAt3x.jpg" >  
 </div>
 
   <!-- Content section -->
-  <div>
+  <div class = " content " >
     <h2> ... </h2>
     <p> ... </p>
   <!-- Interest section --> 
-<div>
+<div id="Interests"> 
+    ...
     <h3>Interest</h3>
     <li> helping others </li>
     <li>Working</li>
