add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,7 +8,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: hotpink;
 			font-size: 300%;
 			text-align: center;
 			display: block;
@@ -18,6 +18,7 @@
 		}
 		.board{
 			height: 100vh;
+			background-color: skyblue;
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -61,7 +62,9 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
+			var positionX= 0;
+			var points = 0;
+			var speed = 10;
 
 			
 			/* 
@@ -70,6 +73,14 @@
 			turn it around! 
 			*/
 			function update() {
+				positionX += speed;
+				if (positionX > boardWidth){
+					speed = -speed;
+				}
+			if (positionX < 0){
+				speed = -speed;
+			}
+			moveBoxTo(positionX);
 				
 
 			};
@@ -80,9 +91,14 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
-
-
+				positionX = 0;
+				points += 1;
+				changeBoxText(points );
+				if (speed > 0){
+					speed += 3;
+				} else if (speed < 0){
+				speed -= 3;
+				}
 			};
 		})();
 	</script>
